# hienmark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: .gitignore  README.md
examples/: .hienmark.json  README.md  analysis-export-pie-2025-10-30T09-05-08-396Z.json  analysis-export-pie-2025-10-30T10-35-31-076Z.json  task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-008.md  task-009.md  task-010.md  task-011.md  (+89 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: data_models.rs  lib.rs  main.rs
src-tauri/src/commands/: analysis_commands.rs  app_settings_commands.rs  filter_sort_commands.rs  gantt_commands.rs  mod.rs  tag_commands.rs  tag_schema_commands.rs  template_commands.rs  watcher_commands.rs  workspace_commands.rs
src-tauri/src/models/: chart.rs  filter_sort.rs  metric.rs  mod.rs  tag.rs  tag_config.rs  task.rs  template.rs  workspace.rs
src-tauri/src/parser/: frontmatter.rs  mod.rs
src-tauri/src/repository/: asset_index_repository.rs  database.rs  folder_index_repository.rs  index_builder.rs  mod.rs  task_index_repository.rs
src-tauri/src/service/: analysis_service.rs  analysis_settings_service.rs  file_watcher.rs  mod.rs  tag_schema_service.rs  tag_service.rs  template_service.rs  workspace_service.rs
src-tauri/src/utils/: mod.rs
src-tauri/tests/integration/: e2e_tests.rs  ipc_tests.rs  mod.rs  service_integration_tests.rs  test_helpers.rs
(+253 files in other folders)
