[package]
name = "hienmark"
version = "0.1.0"
description = "Local-first task management editor with Markdown and tag-based analysis"
authors = ["HienMark Team"]
license = "MIT"
repository = "https://github.com/yourusername/hienmark"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hienmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.1", features = ["unstable"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Markdown parsing
comrak = "0.33"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching
notify = "6"

# Regular expressions
regex = "1"

# Logging
log = "0.4"

[dev-dependencies]
tempfile = "3"
# Testing
assert-json-diff = "2.0"
